# code-factory-3-compile

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  demo.tape  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-pypi.yml
examples/end_to_end/: README.md  topology.yaml
goldens/glp1_review/: README.md
goldens/refunds_decisions/: cases.jsonl
hsf/: __init__.py  __main__.py  aku.py  attribution.py  badge.py  challenge.py  cli.py  demo.py  provenance.py  scaffold.py  serve.py
hsf/context/: lsp_resolver.py
hsf/foundry/: compiler.py  llm_client.py
hsf/gates/: g1_security.py  g2_syntax.py  g3_execution.py  g4_accuracy.py  g5_aku.py  pipeline.py  sandbox_env.py
hsf/registry/: artifacts.py
hsf/runtime/: audit.py  injection.py  orchestrator.py  sandwich.py  state.py
hsf/runtime/backends/: local.py
hsf/runtime/module_library/: clinical.py
hsf/telemetry/: __init__.py  metrics.py  tokens.py
specs/: refunds_decisions.yaml
tests/: test_aku.py  test_attribution.py  test_challenge.py  test_cli_resilience.py  test_examples.py  test_gallery.py  test_injection.py  test_ltap_receipt.py  test_portability.py  test_runtime.py  test_telemetry.py  test_v02_features.py
