[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-factory-3-compile"
version = "0.3.0"
description = "HSF — Harness Software Factory: compile declarative workflow specs into deterministic, gate-validated Python artifacts (Compiled AI with an LTAP factory gate)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["pydantic>=2.5", "PyYAML>=6.0", "jinja2>=3.1"]

[project.optional-dependencies]
llm = ["anthropic>=0.34"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
guards = ["bandit>=1.7", "presidio-analyzer>=2.2"]
dev = ["pytest>=8.0", "mypy>=1.8"]

[project.scripts]
hsf = "hsf.cli:main"

[tool.setuptools.packages.find]
include = ["hsf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
